--- a/ftplugin/javascript/jshint/package.json
+++ b/ftplugin/javascript/jshint/package.json
@@ -4,7 +4,7 @@
   "description": "jshint for vim",
   "repository": "https://github.com/wookiehangover/jshint.vim.git",
   "dependencies": {
-    "jshint": "^2.5.0"
+    "jsxhint": "latest"
   },
   "license": "BSD"
 }
